--- a/Ix4ConnectorService/Locale/Properties/Resources.resx
+++ b/Ix4ConnectorService/Locale/Properties/Resources.resx
@@ -117,6 +117,15 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ActionOnFailureResult" xml:space="preserve">
+    <value>Activate action on failure result</value>
+  </data>
+  <data name="ActionOnSuccessResult" xml:space="preserve">
+    <value>Activate action on success result</value>
+  </data>
+  <data name="Activate" xml:space="preserve">
+    <value>Activate</value>
+  </data>
   <data name="CurrentProcessExist" xml:space="preserve">
     <value>Current app already running.Please close the Ix4-Agent Configurator window and try again.</value>
   </data>
@@ -161,6 +170,9 @@
   </data>
   <data name="ScheduleOrders" xml:space="preserve">
     <value>Check {0} Orders every</value>
+  </data>
+  <data name="SelectAction" xml:space="preserve">
+    <value>Select action</value>
   </data>
   <data name="SelectDataSource" xml:space="preserve">
     <value>Select data source</value>
